syntax = "proto3";

package computeavg;

option java_package = "com.proto.computeaverage";
option java_multiple_files = true;

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;

}

service CalculatorService {
    rpc ComputeAverage( stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}